# vox

./: CMakeLists.txt  README.md  TODO.md
assets/: CMakeLists.txt
client/: CMakeLists.txt
client/embed/: CMakeLists.txt
client/embed/shaders/: block-outline-frag.glsl  chunk-vert.glsl  debug-frag.glsl  debug-vert.glsl  default-vert.glsl  text-frag.glsl
client/embed/shaders/ui/: crosshair-frag.glsl  crosshair-vert.glsl
client/engine/: CMakeLists.txt
client/engine/embed/: CMakeLists.txt
client/engine/embed/shaders/: chunk-frag.glsl  chunk-vert.glsl  text-frag.glsl  text-vert.glsl
client/engine/include/vox/engine/core/: engine.hpp  i_game.hpp  input.hpp
client/engine/include/vox/engine/graphics/: face_data.hpp  graphics_settings.hpp
client/engine/include/vox/engine/tools/: fps_counter.hpp
client/engine/include/vox/engine/world/: client_world.hpp
client/engine/src/core/: engine.cpp  input.cpp  window.cpp
client/engine/src/core/allocators/: offset_allocator.cpp
client/engine/src/graphics/backend/: camera.cpp  chunk_mesh.cpp  shader.cpp  subchunk_mesh.cpp  texture_array.cpp
client/engine/src/graphics/renderers/: block_outline_renderer.cpp  text_renderer.cpp  world_renderer.cpp
client/engine/src/graphics/resources/: texture_paths.cpp
client/engine/src/networking/: host_network_driver.cpp
client/engine/src/tools/: fps_counter.cpp
client/engine/src/tools/imgui/: graphics_imgui_tool.cpp  profiler_imgui_tool.cpp  world_imgui_tool.cpp
client/engine/src/tools/profiler/: profiler.cpp
client/engine/src/world/: client_world.cpp
client/game/: CMakeLists.txt
client/game/src/: game.cpp  game.hpp  main.cpp
client/game/src/player/: player.cpp  player.hpp
client/game/src/ui/: crosshair.cpp  crosshair.hpp
client/include/: pch.hpp  stb_image.h
client/src/vox/client/: game.cpp  game.hpp  main.cpp
client/src/vox/client/core/: engine.cpp  engine.hpp  input.cpp  input.hpp  window.cpp  window.hpp
client/src/vox/client/core/allocators/: offset_allocator.cpp  offset_allocator.hpp
client/src/vox/client/graphics/: face_data.hpp  mesh_utils.cpp  mesh_utils.hpp  model_part.cpp  model_part.hpp
client/src/vox/client/graphics/backend/: camera.cpp  camera.hpp  dynamic_mesh.hpp  mesh_base.hpp  packer.hpp  shader.cpp  shader.hpp  static_mesh.hpp  subchunk_mesh.cpp  subchunk_mesh.hpp  texture_array.cpp  texture_array.hpp  vertex.hpp
client/src/vox/client/player/: player.cpp  player.hpp  player_model.cpp  player_model.hpp
client/src/vox/client/tools/: fps_counter.cpp  fps_counter.hpp
client/src/vox/client/ui/: crosshair.cpp  crosshair.hpp
client/src/vox/client/world/: client_world.cpp  client_world.hpp
common/: CMakeLists.txt
common/include/: pch.hpp
common/include/vox/common/helper/: format_helper.hpp  math_utils.hpp  signal.hpp  singleton.hpp  thread_safe_queue.hpp
common/include/vox/common/networking/: packet_header.hpp  packet_type.hpp  packets.hpp
common/include/vox/common/profiler/: profiler.hpp  profiler_scope_timer.hpp
common/include/vox/common/resources/: texture_id.hpp
common/include/vox/common/server/: player_server_entity.hpp  server_entity.hpp  server_logic.hpp  server_world.hpp
common/include/vox/common/system/: tick_loop.hpp
common/include/vox/common/world/: aabb.hpp  block_face_id.hpp  block_id.hpp  block_position.hpp  block_registry.hpp  block_type.hpp  chunk.hpp  chunk_offsets.hpp  chunk_position.hpp  i_world.hpp  physics.hpp  physics_constants.hpp  subchunk.hpp  world.hpp  world_constants.hpp
common/src/helper/: format_helper.cpp
common/src/server/: player_server_entity.cpp  server_entity.cpp  server_logic.cpp  server_world.cpp
common/src/system/: tick_loop.cpp
common/src/world/: block_position.cpp  block_registry.cpp  chunk.cpp  i_world.cpp  physics.cpp  subchunk.cpp  world.cpp
dedicated_server/: CMakeLists.txt
dedicated_server/include/vox/server/: server.hpp
dedicated_server/src/server/: server.cpp
engine/: CMakeLists.txt
engine/cmake/: glm.cmake
engine/embed/shaders/: block-outline-frag.glsl  block-outline-vert.glsl  chunk-frag.glsl  chunk-vert.glsl
engine/include/: pch.hpp
engine/include/vox/core/: engine.hpp  i_game.hpp  input.hpp  window.hpp
engine/include/vox/core/allocators/: offset_allocator.hpp
engine/include/vox/graphics/: chunk_mesh_generator.hpp  face_data.hpp  graphics_settings.hpp
engine/include/vox/graphics/backend/: mesh.hpp  packer.hpp  shader.hpp  texture_array.hpp
engine/include/vox/graphics/renderers/: block_outline_renderer.hpp  text_renderer.hpp  world_renderer.hpp
engine/include/vox/graphics/resources/: font_data.hpp  texture_id.hpp  texture_paths.hpp
engine/include/vox/helper/: format_helper.hpp
engine/include/vox/tools/: fps_counter.hpp
engine/include/vox/tools/imgui/: graphics_imgui_tool.hpp  profiler_imgui_tool.hpp  profiler_window.hpp  world_imgui_tool.hpp
engine/include/vox/tools/profiler/: profiler.hpp  profiler_scope_timer.hpp  scope_timer.hpp
engine/include/vox/world/: block_id.hpp  block_registry.hpp  block_type.hpp  chunk.hpp  world.hpp
engine/src/core/: engine.cpp  input.cpp  window.cpp
engine/src/core/allocators/: offset_allocator.cpp
engine/src/graphics/: chunk_mesh_generator.cpp
engine/src/graphics/backend/: camera.cpp  shader.cpp  texture_array.cpp
engine/src/graphics/renderers/: block_outline_renderer.cpp  text_renderer.cpp  world_renderer.cpp
engine/src/graphics/resources/: texture_paths.cpp
engine/src/tools/: fps_counter.cpp
engine/src/tools/imgui/: graphics_imgui_tool.cpp  profiler_imgui_tool.cpp  profiler_window.cpp  world_imgui_tool.cpp
engine/src/tools/profiler/: profiler.cpp
engine/src/world/: block_registry.cpp  chunk.cpp  world.cpp
game/: CMakeLists.txt
game/embed/: CMakeLists.txt
game/embed/shaders/ui/: crosshair-vert.glsl
game/src/: game.cpp  game.hpp  main.cpp
game/src/player/: player.cpp  player.hpp
game/src/ui/: crosshair.hpp
server/: CMakeLists.txt
server/include/vox/server/: server.hpp
server/src/: main.cpp
server/src/server/: server.cpp
tests/: CMakeLists.txt  test_allocators.cpp
(+153 files in other folders)
